# LedMatrixDriver

./: .gitignore  .gitmodules  Jenkinsfile  README.md
Code/: CMakeLists.txt  README.md  defines.h.in  main.cpp
Code/Applications/Clock/: CMakeLists.txt  README.md  main.cpp
Code/Applications/Clock/HardwareSetup/include/: HardwareSetup.h
Code/Applications/Clock/HardwareSetup/stm32/: CMakeLists.txt
Code/Applications/Clock/StateMachine/: CMakeLists.txt
Code/Applications/Clock/StateMachine/include/: IState.h  IStateMachine.h  StateMachine.h
Code/Applications/Clock/StateMachine/src/: StateMachine.cpp
Code/Applications/Clock/StateMachine/test/: CMakeLists.txt  TestSettingClock.cpp  TestShowingClock.cpp  TestStateMachine.cpp
Code/Common/: CMakeLists.txt
Code/Common/include/Types/: DateTimeData.h
Code/DisplayControl/: CMakeLists.txt  DisplayCommunication.cpp  DisplayCommunication.h
Code/Displays/: CMakeLists.txt
Code/Displays/HanoverOL037A/: CMakeLists.txt
Code/Displays/HanoverOL037A/include/: HanoverOL037A.h  HanoverOL037A_GPIOInterface.h  IHanoverOL037A.h
Code/Displays/HanoverOL037A/src/: HanoverOL037A.cpp
Code/Displays/include/: IDisplay.h  Monochrome.h  PixelArea.h  VecXD.h  XYPair.h
Code/Displays/test/: CMakeLists.txt  TestHanoverOL037A.cpp  TestIDisplayMonochrome.cpp
Code/Doc/: CMakeLists.txt
Code/HAL/: CMakeLists.txt
Code/HAL/desktop/: CMakeLists.txt
Code/HAL/desktop/include/: DelayDesktop.h  GPIOOutputConfigDesktop.h  GPIOOutputDesktop.h  IGPIOOutputDesktop.h
Code/HAL/desktop/src/: DelayDesktop.cpp  GPIOOutputDesktop.cpp
Code/HAL/include/: DateTimeData.h  IDateTime.h  IDelay.h  IGPIO.h  IGPIOInput.h  IGPIOOutput.h
Code/HAL/stm32/: CMakeLists.txt
Code/HAL/stm32/include/: DateTimeConfigStm32.h  DateTimeStm32.h  DelayConfigStm32.h  DelayStm32.h  GPIOInputConfigStm32.h  GPIOInputStm32.h  GPIOOutputConfigStm32.h  GPIOOutputStm32.h  IDateTimeStm32.h  IDelayStm32.h  IGPIOInputStm32.h  IGPIOOutputStm32.h
Code/HAL/stm32/src/: DateTimeStm32.cpp  DelayStm32.cpp  GPIOInputStm32.cpp  GPIOOutputStm32.cpp
Code/HAL/stm32/stm32f303xc/: CMakeLists.txt
Code/HAL/stm32f303xc/: GPIOOutput.cpp  GPIOOutput.h
Code/HAL/test/: CMakeLists.txt  TestHalDateTimeStm32.cpp  TestHalDelayDesktop.cpp  TestHalDelayStm32.cpp  TestHalDesktop.cpp  TestHalGPIOOutputDesktop.cpp  TestHalGPIOOutputStm32.cpp  TestHalIGPIOOutput.cpp  TestHalStm32.cpp  test_hal_desktop.cpp  test_hal_stm32.cpp
Code/HAL/test/mocks/: MockIDelay.h  MockIGPIOOutput.h
Code/HardwareSetup/: CMakeLists.txt
Code/HardwareSetup/desktop/: CMakeLists.txt
Code/HardwareSetup/desktop/include/: SetupDesktop.h
Code/HardwareSetup/desktop/src/: SetupDesktop.cpp
Code/HardwareSetup/include/: HardwareSetup.h  InitHalHardware.h
Code/HardwareSetup/stm32/: CMakeLists.txt
Code/HardwareSetup/stm32/Stm32f303xc/: CMakeLists.txt
Code/HardwareSetup/stm32/Stm32f303xc/include/: SetupHardwareStm32f303xc.h
Code/HardwareSetup/stm32/Stm32f303xc/src/: InitHardwareStm32f303xc.cpp  SetupHardwareStm32f303xc.cpp
Code/LedMatrixBusLargeDriver/: ArduinoPlatform.h  CMakeLists.txt  Controller.cpp  Controller.h  ICharacterProvider.h  ILedMatrix.h  LedMatrix_Hanover_OL037A.cpp  LedMatrix_Hanover_OL037A.h  Platforms.h  RaspberryPiPlatform.h  SdCharacterProvider.cpp  SdCharacterProvider.h  buildProject.sh
Code/LedMatrixBusLargeDriver/demo/: CMakeLists.txt  LedMatrixBusLargeDriver.ino  RaspberryPi_Demo.cpp  clockLedMatrix.service
Code/LedMatrixBusLargeDriver/lib/: CMakeLists.txt
Code/LedMatrixBusLargeDriver/lib/Adafruit_GFX/: CMakeLists.txt  InfoLink.txt  gfxfont.h
Code/LedMatrixBusLargeDriver/lib/Adafruit_GFX/Fonts/: FreeMono12pt7b.h  FreeMonoBold12pt7b.h  FreeMonoBoldOblique12pt7b.h  FreeSansBoldOblique12pt7b.h  FreeSerifBoldItalic12pt7b.h
Code/LedMatrixBusLargeDriver/src/: CMakeLists.txt
Code/LedMatrixBusLargeDriver/src/ledMatrixDriver/: CMakeLists.txt
Code/LedMatrixBusLargeDriver/src/ledMatrixDriver/displayContent/: Character.h  CharacterProvider_AdafruitGFX.cpp  CharacterProvider_AdafruitGFX.h  ContentData.h  ICharacterProvider.h  IImageProvider.h  ImageProvider.cpp  ImageProvider.h  SdCharacterProvider.cpp  SdCharacterProvider.h
Code/LedMatrixBusLargeDriver/src/ledMatrixDriver/displayController/: Controller.cpp  Controller.h
Code/LedMatrixBusLargeDriver/src/ledMatrixDriver/driverPlatforms/: ArduinoPlatform.h  RaspberryPiPlatform.h
Code/LedMatrixBusLargeDriver/src/ledMatrixDriver/targetDisplays/: ILedMatrix.h  LedMatrix_Hanover_OL037A.cpp  LedMatrix_Hanover_OL037A.h
Code/LedMatrixBusLargeDriver_Test/: LedMatrixBusLargeDriver_Test.ino
Code/Libs/: CMakeLists.txt
Code/Libs/Common/include/: BitManipulation.h  ValueChecks.h
Code/Libs/Displays/HanoverOL037A/: CMakeLists.txt
Code/Libs/Displays/HanoverOL037A/include/: HanoverOL037A_GPIOInterface.h  IHanoverOL037A.h
Code/Libs/Displays/HanoverOL037A/src/: HanoverOL037A.cpp
Code/Libs/Displays/include/: RGB.h  VecXD.h
Code/Libs/Displays/test/: CMakeLists.txt
Code/Libs/Displays/test/mocks/: MockIDisplay.h
Code/Libs/HAL/: pre_project.cmake
Code/Libs/HAL/include/: IDateTime.h
Code/Libs/HAL/stm32/: CMakeLists.txt
Code/Libs/HAL/stm32/include/: DateTimeStm32.h  DelayConfigStm32.h  DelayStm32.h  IDateTimeStm32.h  IDelayStm32.h  IGPIOOutputStm32.h
Code/Libs/HAL/stm32/src/: GPIOOutputStm32.cpp
Code/Libs/HAL/test/: CMakeLists.txt  TestHalDateTimeStm32.cpp  TestHalGPIOInputStm32.cpp  TestHalIGPIOOutput.cpp
Code/Libs/HAL/test/mocks/: MockIDateTime.h  MockIDelay.h  MockIGPIOInput.h  MockIGPIOOutput.h
Code/Libs/TextProvider/: CMakeLists.txt
Code/Libs/TextProvider/include/: ITextProvider.h  TextBmhFormat.h
Code/Libs/TextProvider/test/: CMakeLists.txt  TestTextBmhFormat.cpp
Code/TextContent/: CMakeLists.txt
Code/TextContent/include/: TextContent.h
Code/TextContent/test/: CMakeLists.txt  TestTextContent.cpp
Code/TextProvider/include/: ITextProvider.h  TextBmhFormat.h
Code/TextProvider/src/: TextBmhFormat.cpp
Code/TextProvider/test/: TestTextBmhFormat.cpp
Code/TextProvider/test/TestFonts/: Bitstream_Vera_Sans_Mono_8.h
(+78 files in other folders)
